crates/compiler/tests/parse_errors/type_name.txt
-- EXPECTING TYPE NAME -------------------------------------------- src/Main.elm

I think I am parsing a type declaration, but I got stuck here:

2| type = A
        ^
I was expecting a name like Status or Style next. Just make sure it is a name
that starts with a capital letter!

Note: Here is an example of a valid `type` declaration for reference:

    type Status
      = Failure
      | Waiting
      | Success String

This defines a new `Status` type with three variants. This could be useful if we
are waiting for an HTTP request. Maybe we start with `Waiting` and then switch
to `Failure` or `Success "message from server"` depending on how things go.
Notice that the Success variant has some associated data, allowing us to store a
String if the request goes well!

